<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editClassModel"
            type="com.gym.sensiyar.classDetail.editClass.EditClassViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_primary_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editClassDetailLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_white"
            android:paddingLeft="@dimen/size_14"
            android:paddingTop="@dimen/size_14"
            android:paddingRight="@dimen/size_14"
            android:paddingBottom="@dimen/size_30"
            app:layout_constraintTop_toTopOf="parent">

            <com.gym.sensiyar.customControls.CustomTextViewMedium
                android:id="@+id/editClassTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_class"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_16"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editClassClose"
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:src="@drawable/ic_close"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.gym.sensiyar.customControls.CustomEditTextMedium
                android:id="@+id/editClassName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30"
                android:background="@drawable/edt_background"
                android:gravity="right"
                android:hint="@string/class_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/size_12"
                android:text="@={editClassModel.className}"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintTop_toBottomOf="@id/editClassTitle" />

            <LinearLayout
                android:id="@+id/editClassDetailPeriodLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/editClassName">

                <com.gym.sensiyar.customControls.CustomButtonMeduim
                    android:id="@+id/editClassEven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edt_background"
                    android:padding="@dimen/size_14"
                    android:gravity="center"
                    android:text="@string/even" />

                <com.gym.sensiyar.customControls.CustomButtonMeduim
                    android:id="@+id/editClassOdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/corner_primary"
                    android:padding="@dimen/size_14"
                    android:text="@string/odd"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>

                <com.gym.sensiyar.customControls.CustomButtonMeduim
                    android:id="@+id/editClassEveryDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edt_background"
                    android:padding="@dimen/size_14"
                    android:text="@string/every_day"
                    android:gravity="center"/>

            </LinearLayout>

            <com.gym.sensiyar.customControls.CustomEditTextMedium
                android:id="@+id/editClassTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_12"
                android:background="@drawable/edt_background"
                android:gravity="right"
                android:hint="@string/class_time"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/size_12"
                android:text="@={editClassModel.classTime}"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintTop_toBottomOf="@id/editClassDetailPeriodLyt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.gym.sensiyar.customControls.CustomButtonMeduim
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_margin="@dimen/size_12"
            android:background="@drawable/corner_white_btn"
            android:text="@string/edit"
            android:textSize="@dimen/font_size_14"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editClassDetailLyt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>